add button Mario btwn 1 n 2d

--- a/index_ignore.html
+++ b/index_ignore.html
@@ -10,6 +10,7 @@
 <body>
 
     <button class="button">call me 1</button>
+    <button class="button">Mario</button>
     <button class="button">call me 1</button>
     <button class="button">call me 1</button>
     <button class="button">call me 1</button>
