add updated index file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <button class="button">call me 1</button>
-    <button class="button">korki buchek</button>
+    <button class="button">korki buchek ewfdewd</button>
     <button class="button">call me 1</button>
     <button class="button">call me 1</button>
 
