--- a/index.html
+++ b/index.html
@@ -9,8 +9,49 @@
 </head>
 
 <body>
-
-<!-- your homework here-->
+    <div class="wrap">
+        <h3 class="wrap__heading">Корзина</h3>
+        <div class="wrap__elm">
+            <div class="wrap__elm-img"></div>
+            <div class="wrap__elm-info">
+                <div class="wrap__elm-name">Название товара</div>
+                <div class="wrap__elm-price">1900р.</div>
+                <div class="wrap__elm-desc">Описание товара.Описание товара.Описание товара.Описание товара.Описание
+                    товара.</div>
+            </div>
+            <button class="wrap__elm-bth">Удалить</button>
+        </div>
+        <div class="wrap__elm">
+            <div class="wrap__elm-img"></div>
+            <div class="wrap__elm-info">
+                <div class="wrap__elm-name">Название товара</div>
+                <div class="wrap__elm-price">1900р.</div>
+                <div class="wrap__elm-desc">Описание товара.Описание товара.Описание товара.Описание товара.Описание
+                    товара.</div>
+            </div>
+            <button class="wrap__elm-bth">Удалить</button>
+        </div>
+        <div class="wrap__elm">
+            <div class="wrap__elm-img"></div>
+            <div class="wrap__elm-info">
+                <div class="wrap__elm-name">Название товара</div>
+                <div class="wrap__elm-price">1900р.</div>
+                <div class="wrap__elm-desc">Описание товара.Описание товара.Описание товара.Описание товара.Описание
+                    товара.</div>
+            </div>
+            <button class="wrap__elm-bth">Удалить</button>
+        </div>
+        <div class="wrap__elm">
+            <div class="wrap__elm-img"></div>
+            <div class="wrap__elm-info">
+                <div class="wrap__elm-name">Название товара</div>
+                <div class="wrap__elm-price">1900р.</div>
+                <div class="wrap__elm-desc">Описание товара.Описание товара.Описание товара.Описание товара.Описание
+                    товара.</div>
+            </div>
+            <button class="wrap__elm-bth">Удалить</button>
+        </div>
+    </div>
 
 </body>
 
