--- a/index.html
+++ b/index.html
@@ -5,12 +5,60 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../../Style/basket.css">
 </head>
 
 <body>
+    <div  class="basket"> <h1><center>Корзина</center></h1>
+        <div class="basket__card card">
+            <div class="card__img" ></div>
+            <div class="card__info info">
+                <div class="info__title">Путевка в Крым</div>
+                <div class="info__price">30000руб</div>
+                <div class="info__desc">очень чётко отдахнёте очень чётко отдахнёте очень чётко отдахнёте очень чётко отдахнёте</div>
+                <div class="info__button">УДАЛИТЬ</div>
+            </div>  
+        </div>
+            <div class="basket__card card">
+                <div class="card__img" ></div>
+                <div class="card__info info">
+                    <div class="info__title">Путевка в Крым</div>
+                    <div class="info__price">30000руб</div>
+                    <div class="info__desc">очень чётко отдахнёте очень чётко отдахнёте очень чётко отдахнёте очень чётко отдахнёте</div>
+                    <div class="info__button">УДАЛИТЬ</div>
+                </div>  
+            </div>
+                <div class="basket__card card">
+                    <div class="card__img" ></div>
+                    <div class="card__info info">
+                        <div class="info__title">Путевка в Крым</div>
+                        <div class="info__price">30000руб</div>
+                        <div class="info__desc">очень чётко отдахнёте очень чётко отдахнёте очень чётко отдахнёте очень чётко отдахнёте</div>
+                        <div class="info__button">УДАЛИТЬ</div>
+                    </div>  
+                </div>
+                    <div class="basket__card card">
+                        <div class="card__img" ></div>
+                        <div class="card__info info">
+                            <div class="info__title">Путевка в Крым</div>
+                            <div class="info__price">30000руб</div>
+                            <div class="info__desc">очень чётко отдахнёте очень чётко отдахнёте очень чётко отдахнёте очень чётко отдахнёте</div>
+                            <div class="info__button">УДАЛИТЬ</div>
+                        </div>  
+                    </div>
 
-<!-- your homework here-->
+                        <div class="basket__card card">
+                            <div class="card__img" ></div>
+                            <div class="card__info info">
+                                <div class="info__title">Путевка в Крым</div>
+                                <div class="info__price">30000руб</div>
+                                <div class="info__desc">очень чётко отдахнёте очень чётко отдахнёте очень чётко отдахнёте очень чётко отдахнёте</div>
+                                <div class="info__button">УДАЛИТЬ</div>
+                            </div>  
+                        </div>
+       
+    </div>
+
 
 </body>
 
