--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
 
 <body>
 
-<!-- your homework here-->
+    <div class="card">
+        <img src="https://cs8.pikabu.ru/avatars/1672/x1672551-179614235.png" alt="" class="card__img">
+            <div class="card__text-wrap">
+            <div class="card__text">GEEG</div>
+            <div class="card__text">BOOF</div>
+        </div>
+    </div>
+    <div class="card">
+        <img src="https://cs8.pikabu.ru/avatars/1672/x1672551-179614235.png" alt="" class="card__img">
+            <div class="card__text-wrap">
+            <div class="card__text">GEEG</div>
+            <div class="card__text">BOOF</div>
+        </div>
+    </div>
 
 </body>
 
