--- a/index.html
+++ b/index.html
@@ -3,14 +3,29 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
+    <title>layout</title>
 </head>
 
 <body>
+    <div class="main">
+        <header class="header">
+            <img src="image/logo.png" alt="" class="header__logo">
+            <div class="header__item">
+                <span class="header__item-el">СКИДКА 20% НА ЛЕТНИЕ БЛУЗЫ. <a href="">ПОДРОБНЕЕ</a></span>
+                <span class="header__item-el">Сервис</span>
+                <span class="header__item-el">Личный кабинет</span>
+                <span class="header__item-el header__item-el_size"><img src="image/icon.png" alt=""> 0</span>
+                <span class="header__item-el header__item-el_size"><img src="image/Bag_icon.png" alt=""> 15</span>
 
-<!-- your homework here-->
+            </div>
+
+
+
+        </header>
+    </div>
 
 </body>
 
