--- a/index.html
+++ b/index.html
@@ -6,27 +6,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
+
     <title>layout</title>
 </head>
 
 <body>
-    <div class="main">
+    <div class="wraper">
         <header class="header">
-            <img src="image/logo.png" alt="" class="header__logo">
-            <div class="header__item">
-                <span class="header__item-el">СКИДКА 20% НА ЛЕТНИЕ БЛУЗЫ. <a href="">ПОДРОБНЕЕ</a></span>
-                <span class="header__item-el">Сервис</span>
-                <span class="header__item-el">Личный кабинет</span>
-                <span class="header__item-el header__item-el_size"><img src="image/icon.png" alt=""> 0</span>
-                <span class="header__item-el header__item-el_size"><img src="image/Bag_icon.png" alt=""> 15</span>
-
+            <div class="header-top">
+                <div class="header-container _container">
+                    <img src="image/logo_top.png" alt="" class="header-top__logo">
+                    <div class="header-top__user">
+                        <span class="header-top__user-discount">СКИДКА 20% НА ЛЕТНИЕ БЛУЗЫ. <a
+                                href="">ПОДРОБНЕЕ</a></span>
+                        <span class="header-top__user-el ">Сервис</span>
+                        <span class="header-top__user-el header-top__user-el_border">Личный кабинет</span>
+                        <span class="header-top__user-el header-top__user-el_size"><img src="image/hearts_icon.png"
+                                alt=""> 0</span>
+                        <span class="header-top__user-el header-top__user-el_size" alt=""><img src=" image/Bag_icon.png"
+                                alt=""> 15</span>
+                    </div>
+                </div>
             </div>
-
-
-
+            <div class="header-middle">
+                <div class="header-container _container">
+                    <span class="header-middle__link">
+                        <img src="image/Ge_icon.jpg" alt="">
+                        <a href="">г.Москва. Магазин в москве</a>
+                    </span>
+                    <img src="image/logo_mid.jpg" alt="" class="header-middle__logo">
+                    <div class="header-middle__searsh">
+                        <input type="text" name="search" value="&#128270; ПОИСК">
+                    </div>
+                </div>
+            </div>
+            <nav class="header-bottom">
+                <div class="header-container _container">
+                    <span class="header-bottom__li"><a href="">НОВИНКИ</a></span>
+                    <span class="header-bottom__li"><a href="">ОДЕЖДА</a></span>
+                    <span class="header-bottom__li"><a href="">ОБУВЬ</a></span>
+                    <span class="header-bottom__li"><a href="">СУМКИ</a></span>
+                    <span class=" header-bottom__li"><a href="">АКСЕССУАРЫ</a></span>
+                    <span class="header-bottom__li"><a href="">РАСПРОДАЖА</a></span>
+                </div>
+            </nav>
         </header>
+        <div class="content">
+        </div>
+        <foter class="foter"></foter>
     </div>
-
 </body>
 
 </html>
