updated header and foter

--- a/index.html
+++ b/index.html
@@ -13,47 +13,138 @@
 <body>
     <div class="wraper">
         <header class="header">
-            <div class="header-top">
-                <div class="header-container _container">
-                    <img src="image/logo_top.png" alt="" class="header-top__logo">
-                    <div class="header-top__user">
-                        <span class="header-top__user-discount">СКИДКА 20% НА ЛЕТНИЕ БЛУЗЫ. <a
-                                href="">ПОДРОБНЕЕ</a></span>
-                        <span class="header-top__user-el ">Сервис</span>
-                        <span class="header-top__user-el header-top__user-el_border">Личный кабинет</span>
-                        <span class="header-top__user-el header-top__user-el_size"><img src="image/hearts_icon.png"
-                                alt=""> 0</span>
-                        <span class="header-top__user-el header-top__user-el_size" alt=""><img src=" image/Bag_icon.png"
-                                alt=""> 15</span>
+            <div class="header__item">
+                <div class="header-top">
+                    <div class="header-top__wrap container">
+                        <div class="header-top__item header-top__item_logo">
+                            <img src="image/logo_top.png" alt="" class="image">
+                        </div>
+                        <div class="header-top__item header-top__item_center">
+                            <span class="header-top__text-uppercase">СКИДКА 20% НА ЛЕТНИЕ БЛУЗЫ.</span>
+                            <a href="" class="header-top__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <div class="header-top__item header-top__item_flex">
+                            <div class="header-top__personal">
+                                <a href="" class="header-top__data">Сервис</a>
+                                <a href="" class="header-top__data">Личный кабинет</a>
+                            </div>
+                            <div class="header-top__set">
+                                <div class="header-top__set-el">
+                                    <div class="icon-block icon-block_active icon-block_heart">
+                                        <div class="icon-block__img"></div>
+                                        <div class="icon-block__numeric">0</div>
+                                    </div>
+                                </div>
+                                <div class="header-top__set-el">
+                                    <div class="icon-block icon-block_active icon-block_bag">
+                                        <div class="icon-block__img"></div>
+                                        <div class="icon-block__numeric">2</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="header-middle">
-                <div class="header-container _container">
-                    <span class="header-middle__link">
-                        <img src="image/Ge_icon.jpg" alt="">
-                        <a href="">г.Москва. Магазин в москве</a>
-                    </span>
-                    <img src="image/logo_mid.jpg" alt="" class="header-middle__logo">
-                    <div class="header-middle__searsh">
-                        <input type="text" name="search" value="&#128270; ПОИСК">
+            <div class="header__item">
+                <div class="header-middle">
+                    <div class="header-middle__wrap container">
+                        <div class="header-middle__location">
+                            <div class="header-middle__geo">
+                                <img src="image/icon/geo.png" alt="" class="image">
+                            </div>
+                            <a href="" class="header-middle__link header-middle__link_right">г.Москва.</a>
+                            <a href="" class="header-middle__link">Магазин в москве</a>
+                        </div>
+                        <div class="header-middle__logo">
+                            <img src="image/logo_middle.png" alt="" class="image">
+                        </div>
+                        <div class="input-group">
+                            <input type="text" class="input-group__item input" id="input__search">
+                            <label for="input__search" class="input-group__search">
+                                <span class="input-group__text">ПОИСК</span>
+                            </label>
+                        </div>
                     </div>
                 </div>
             </div>
-            <nav class="header-bottom">
-                <div class="header-container _container">
-                    <span class="header-bottom__li"><a href="">НОВИНКИ</a></span>
-                    <span class="header-bottom__li"><a href="">ОДЕЖДА</a></span>
-                    <span class="header-bottom__li"><a href="">ОБУВЬ</a></span>
-                    <span class="header-bottom__li"><a href="">СУМКИ</a></span>
-                    <span class=" header-bottom__li"><a href="">АКСЕССУАРЫ</a></span>
-                    <span class="header-bottom__li"><a href="">РАСПРОДАЖА</a></span>
+            <div class="header__item">
+                <div class="header-bottom">
+                    <div class="header-bottom__wrap container">
+                        <div class="header-bottom__item">
+                            <span><a href="" class="header-bottom__el">НОВИНКИ</a></span>
+                            <span><a href="" class="header-bottom__el">ОДЕЖДА</a></span>
+                            <span><a href="" class="header-bottom__el">ОБУВЬ</a></span>
+                        </div>
+                        <div class="header-bottom__item">
+                            <span><a href="" class="header-bottom__el">СУМКИ</a></span>
+                            <span><a href="" class="header-bottom__el">АКСЕССУАРЫ</a></span>
+                            <span><a href="" class="header-bottom__el">РАСПРОДАЖА</a></span>
+                        </div>
+                    </div>
                 </div>
-            </nav>
+            </div>
         </header>
         <div class="content">
         </div>
-        <foter class="foter"></foter>
+        <foter class="foter">
+            <div class="foter-top">
+                <div class="foter-top__wrap container">
+                    <div class="foter-top__text">Нужна помощь с заказом?</div>
+                    <div class="foter-top__phone">
+                        <span>+7 800 800 88 88</span>
+                        <span>+7 495 698 63 58</span>
+                    </div>
+
+                </div>
+            </div>
+            <div class="foter-bottom">
+                <div class="foter-bottom__wrap container">
+                    <div class="foter-bottom__item ">
+                        <div class="foter-bottom__list">
+                            <ul class="foter-bottom__heading">КОМПАНИЯ
+                                <li><a href="" class="foter-bottom__li">История</a> </li>
+                                <li><a href="" class="foter-bottom__li">Карьера</a> </li>
+                                <li><a href="" class="foter-bottom__li">Пресса</a> </li>
+                                <li><a href="" class="foter-bottom__li">Франшиза</a> </li>
+                                <li><a href="" class="foter-bottom__li">Контакты</a> </li>
+                            </ul>
+                        </div>
+                        <div class="foter-bottom__list">
+                            <ul class="foter-bottom__heading">СЕРВИС
+                                <li><a href="" class="foter-bottom__li">Доставка</a> </li>
+                                <li><a href="" class="foter-bottom__li">Оплата</a> </li>
+                                <li><a href="" class="foter-bottom__li">Возврат</a> </li>
+                                <li><a href="" class="foter-bottom__li">Гид по размерам</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="foter-bottom__input-gpoup">
+                        <div class="foter-bottom__heading foter-bottom__heading_margin">УЗНАЙТЕ ПЕРВЫМИ О НОВЫХ АКЦИЯХ
+                            DREAMS</div>
+                        <input type="text" name="mail" placeholder="Ваш e-mail" class="input-group__item">
+                    </div>
+                    <div class="foter-bottom__item">
+                        <div class="foter-bottom__info">
+                            <div class="foter-bottom__heading ">DREAMS
+                                В СОЦИАЛЬНЫХ СЕТЯХ</div>
+                            <div class="foter-bottom__social">
+                                <a href=""><img src="image/icon/Insta.png" alt=""></a>
+                                <a href=""><img src="image/icon/Fb.png" alt=""></a>
+                                <a href=""><img src="image/icon/VK.png" alt=""></a>
+                                <a href=""><img src="image/icon/Twitter.png" alt=""></a>
+                            </div>
+                            <div class="foter-bottom__heading foter-bottom__heading_top">СПОСОБЫ ОПЛАТЫ</div>
+                            <div class="foter-bottom__card">
+                                <img src="image/icon/card.jpg" alt="" class="image">
+                            </div>
+                            <div class="foter-bottom__text">Вы можете оплатить покупки наличными при получении или
+                                выбрать <a href="" class="foter-bottom__link">другой способ оплаты</a></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </foter>
     </div>
 </body>
 
