corrected footer and content

--- a/index.html
+++ b/index.html
@@ -72,79 +72,239 @@
                 <div class="header-bottom">
                     <div class="header-bottom__wrap container">
                         <div class="header-bottom__item">
-                            <span><a href="" class="header-bottom__el">НОВИНКИ</a></span>
-                            <span><a href="" class="header-bottom__el">ОДЕЖДА</a></span>
-                            <span><a href="" class="header-bottom__el">ОБУВЬ</a></span>
+                            <a href="" class="header-bottom__el">НОВИНКИ</a>
+                            <a href="" class="header-bottom__el">ОДЕЖДА</a>
+                            <a href="" class="header-bottom__el">ОБУВЬ</a>
                         </div>
                         <div class="header-bottom__item">
-                            <span><a href="" class="header-bottom__el">СУМКИ</a></span>
-                            <span><a href="" class="header-bottom__el">АКСЕССУАРЫ</a></span>
-                            <span><a href="" class="header-bottom__el">РАСПРОДАЖА</a></span>
+                            <a href="" class="header-bottom__el">СУМКИ</a>
+                            <a href="" class="header-bottom__el">АКСЕССУАРЫ</a>
+                            <a href="" class="header-bottom__el">РАСПРОДАЖА</a>
                         </div>
                     </div>
                 </div>
             </div>
         </header>
         <div class="content">
+            <div class="content__wrap container">
+                <div class="content__title">
+                    <div class="content__title-el content__title-el_flex">
+                        <div class="content__title-cart">Корзина</div>
+                        <div>Количество</div>
+                    </div>
+                    <div class="content__title-el">Стоимость</div>
+                </div>
+                <div class="content__card">
+                    <div class="content__card-img"></div>
+                    <div class="content__card-wrap">
+                        <div class="content__card-item">
+                            <div class="content__card-info">
+                                <div class="content__card-leiba">AKHMADULINA DREAMS</div>
+                                <div class="content__card-name">Брюки с принтом "Цветущий папоротник"</div>
+                            </div>
+                            <div class="content__card-info">
+                                <div class="content__card-color">
+                                    <span>ЦВЕТ</span>
+                                    <span>Цветущий папоротник</span>
+                                </div>
+                                <div class="content__card-size">
+                                    <span>РАЗМЕР</span>
+                                    <span>RU</span>
+                                    <span>46</span>
+                                    <span>30</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="conetnt__card-item">
+                            <div class="content__card-quantity">
+                                <span>-</span>
+                                <span>1</span>
+                                <span>+</span>
+                            </div>
+                        </div>
+                        <div class="content__card-item">
+                            <div class="content__card-amount">
+                                <div>6999 P</div>
+                                <span>6999 P</span>
+                                <span>x</span>
+                                <span>1 шт</span>
+                            </div>
+                            <div class="icon-block icon-block_favorits icon-block_red">
+                                <div class="icon-block__img"></div>
+                                <div class="icon-block__del">Удалить</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="content__card">
+                    <div class="content__card-img"></div>
+                    <div class="content__card-wrap">
+                        <div class="content__card-item">
+                            <div class="content__card-info">
+                                <div class="content__card-leiba">AKHMADULINA DREAMS</div>
+                                <div class="content__card-name">Брюки с принтом "Цветущий папоротник"</div>
+                            </div>
+                            <div class="content__card-info">
+                                <div class="content__card-color">
+                                    <span>ЦВЕТ</span>
+                                    <span>Цветущий папоротник</span>
+                                </div>
+                                <div class="content__card-size">
+                                    <span>РАЗМЕР</span>
+                                    <span>RU</span>
+                                    <span>46</span>
+                                    <span>30</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="conetnt__card-item">
+                            <div class="content__card-quantity">
+                                <span>-</span>
+                                <span>1</span>
+                                <span>+</span>
+                            </div>
+                        </div>
+                        <div class="content__card-item">
+                            <div class="content__card-amount">
+                                <div>6999 P</div>
+                                <span>6999 P</span>
+                                <span>x</span>
+                                <span>1 шт</span>
+                            </div>
+                            <div class="icon-block icon-block_favorits icon-block_red">
+                                <div class="icon-block__img"></div>
+                                <div class="icon-block__del">Удалить</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="content-purchases">
+                    <div class="content-purchases__el"><a href="" class="content-purchases__promo">Промкод</a></div>
+                    <div class="content-purchases__el content-purchases__el-flex">
+                        <div class="content-purchases__cost">
+                            <div>Стоимость товаров:</div>
+                            <div>6999 P</div>
+                        </div>
+                        <div class="content-purchases__discount">
+                            <div>Скидка:</div>
+                            <div>1200 P</div>
+                        </div>
+                        <div class="content-purchases__delivery">
+                            <div>Доставка:</div>
+                            <div>500 P</div>
+                        </div>
+                        <div class="content-purchases__total">
+                            <div>ИТОГО:</div>
+                            <div>6299 P</div>
+                        </div>
+                        <button class="bth bth_green">
+                            <div>ОФОРМИТЬ ЗАКАЗ</div>
+                        </button>
+                        <div class="content-purchases__offer">
+                            Нажимая на кнопку «Формить заказ», вы принимаете условия <a href="">Публичной оферты</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="content__reference">
+                    <div class="content__reference-el content__reference-el_italic">Рекомендованые вам</div>
+                    <div class="content__reference-el content__reference-el_flex">
+                        <div class="icon-block__img icon-block__img_left"></div>
+                        <div class="content__reference-product">
+                            <div class="content__reference-img content__reference-img_dress"></div>
+                            <div class="content__reference-text">Платье с длинным
+                                рукавом, принт "Гербарий"</div>
+                            <div class="content__reference-text">19 900 ₽</div>
+                        </div>
+                        <div class="content__reference-product">
+                            <div class="content__reference-img content__reference-img_skirt"></div>
+                            <div class="content__reference-text">Юбка короткая, принт
+                                "Васильки"</div>
+                            <div class="content__reference-text">19 900 ₽</div>
+                        </div>
+                        <div class="content__reference-product">
+                            <div class="content__reference-img content__reference-img_jeans"></div>
+                            <div class="content__reference-text">Джинсы</div>
+                            <div class="content__reference-text">19 900 ₽</div>
+                        </div>
+                        <div class="content__reference-product">
+                            <div class="content__reference-img content__reference-img_pants"></div>
+                            <div class="content__reference-text">Брюки</div>
+                            <div class="content__reference-text">19 900 ₽</div>
+                        </div>
+                        <div class="content__reference-product">
+                            <div class="content__reference-img content__reference-img_skirt1"></div>
+                            <div class="content__reference-text">Юбка длинная, плиссе</div>
+                            <div class="content__reference-text">19 900 ₽</div>
+                        </div>
+                        <div class="icon-block__img icon-block__img_right"></div>
+                    </div>
+                    <div class="content__reference-el">
+                        <button class="bth bth_bottom">
+                            <div>ПРОДОЛЖИТЬ ПОКУПКИ</div>
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
-        <foter class="foter">
-            <div class="foter-top">
-                <div class="foter-top__wrap container">
-                    <div class="foter-top__text">Нужна помощь с заказом?</div>
-                    <div class="foter-top__phone">
+        <footer class="footer">
+            <div class="footer-top">
+                <div class="footer-top__wrap container">
+                    <div class="footer-top__text">Нужна помощь с заказом?</div>
+                    <div class="footer-top__phone">
                         <span>+7 800 800 88 88</span>
                         <span>+7 495 698 63 58</span>
                     </div>
 
                 </div>
             </div>
-            <div class="foter-bottom">
-                <div class="foter-bottom__wrap container">
-                    <div class="foter-bottom__item ">
-                        <div class="foter-bottom__list">
-                            <ul class="foter-bottom__heading">КОМПАНИЯ
-                                <li><a href="" class="foter-bottom__li">История</a> </li>
-                                <li><a href="" class="foter-bottom__li">Карьера</a> </li>
-                                <li><a href="" class="foter-bottom__li">Пресса</a> </li>
-                                <li><a href="" class="foter-bottom__li">Франшиза</a> </li>
-                                <li><a href="" class="foter-bottom__li">Контакты</a> </li>
+            <div class="footer-bottom">
+                <div class="footer-bottom__wrap container">
+                    <div class="footer-bottom__item ">
+                        <div class="footer-bottom__list">
+                            <ul class="footer-bottom__heading">КОМПАНИЯ
+                                <li><a href="" class="footer-bottom__li">История</a> </li>
+                                <li><a href="" class="footer-bottom__li">Карьера</a> </li>
+                                <li><a href="" class="footer-bottom__li">Пресса</a> </li>
+                                <li><a href="" class="footer-bottom__li">Франшиза</a> </li>
+                                <li><a href="" class="footer-bottom__li">Контакты</a> </li>
                             </ul>
                         </div>
-                        <div class="foter-bottom__list">
-                            <ul class="foter-bottom__heading">СЕРВИС
-                                <li><a href="" class="foter-bottom__li">Доставка</a> </li>
-                                <li><a href="" class="foter-bottom__li">Оплата</a> </li>
-                                <li><a href="" class="foter-bottom__li">Возврат</a> </li>
-                                <li><a href="" class="foter-bottom__li">Гид по размерам</a></li>
+                        <div class="footer-bottom__list">
+                            <ul class="footer-bottom__heading">СЕРВИС
+                                <li><a href="" class="footer-bottom__li">Доставка</a> </li>
+                                <li><a href="" class="footer-bottom__li">Оплата</a> </li>
+                                <li><a href="" class="footer-bottom__li">Возврат</a> </li>
+                                <li><a href="" class="footer-bottom__li">Гид по размерам</a></li>
                             </ul>
                         </div>
                     </div>
-                    <div class="foter-bottom__input-gpoup">
-                        <div class="foter-bottom__heading foter-bottom__heading_margin">УЗНАЙТЕ ПЕРВЫМИ О НОВЫХ АКЦИЯХ
+                    <div class="footer-bottom__input-gpoup">
+                        <div class="footer-bottom__heading footer-bottom__heading_margin">УЗНАЙТЕ ПЕРВЫМИ О НОВЫХ
+                            АКЦИЯХ
                             DREAMS</div>
                         <input type="text" name="mail" placeholder="Ваш e-mail" class="input-group__item">
                     </div>
-                    <div class="foter-bottom__item">
-                        <div class="foter-bottom__info">
-                            <div class="foter-bottom__heading ">DREAMS
+                    <div class="footer-bottom__item">
+                        <div class="footer-bottom__info">
+                            <div class="footer-bottom__heading ">DREAMS
                                 В СОЦИАЛЬНЫХ СЕТЯХ</div>
-                            <div class="foter-bottom__social">
+                            <div class="footer-bottom__social">
                                 <a href=""><img src="image/icon/Insta.png" alt=""></a>
                                 <a href=""><img src="image/icon/Fb.png" alt=""></a>
                                 <a href=""><img src="image/icon/VK.png" alt=""></a>
                                 <a href=""><img src="image/icon/Twitter.png" alt=""></a>
                             </div>
-                            <div class="foter-bottom__heading foter-bottom__heading_top">СПОСОБЫ ОПЛАТЫ</div>
-                            <div class="foter-bottom__card">
+                            <div class="footer-bottom__heading footer-bottom__heading_top">СПОСОБЫ ОПЛАТЫ</div>
+                            <div class="footer-bottom__card">
                                 <img src="image/icon/card.jpg" alt="" class="image">
                             </div>
-                            <div class="foter-bottom__text">Вы можете оплатить покупки наличными при получении или
-                                выбрать <a href="" class="foter-bottom__link">другой способ оплаты</a></div>
+                            <div class="footer-bottom__text">Вы можете оплатить покупки наличными при получении или
+                                выбрать <a href="" class="footer-bottom__link">другой способ оплаты</a></div>
                         </div>
                     </div>
                 </div>
             </div>
-        </foter>
+        </footer>
     </div>
 </body>
 
